changed the docker compose yml file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,25 +13,7 @@ services:
       retries: 5
     networks:
       - backend_services
-  rabbitmq:
-    image: rabbitmq:3.11.17-management-alpine
-    container_name: 'rabbitmq'
-    restart: always
-    environment:
-      - "RABBITMQ_DEFAULT_USER=username"
-      - "RABBITMQ_DEFAULT_PASS=password"
-    ports:
-      - 15672:15672
-      - 5672:5672
-    healthcheck:
-      test: ["CMD", "rabbitmqctl", "status"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-    volumes:
-      - ../../rabbitmq_enabled_plugins:/etc/rabbitmq/enabled_plugins
-    networks:
-      - backend_services
+
   order-service:
     image: ramymohamed/order-service-l8:latest
     container_name: 'order-service'
@@ -44,17 +26,12 @@ services:
       timeout: 10s
       retries: 5
     environment:
-      - ORDER_QUEUE_HOSTNAME=rabbitmq
-      - ORDER_QUEUE_PORT=5672
-      - ORDER_QUEUE_USERNAME=username
-      - ORDER_QUEUE_PASSWORD=password
-      - ORDER_QUEUE_NAME=orders
-      - ORDER_QUEUE_RECONNECT_LIMIT=3
+      - SERVICE_BUS_CONNECTION_STRING=Endpoint=sb://your-servicebus.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=yourkey
+      - SERVICE_BUS_QUEUE_NAME=orders
+      - SERVICE_BUS_RECONNECT_LIMIT=3
     networks:
       - backend_services
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
+
   makeline-service:
     image: ramymohamed/makeline-service-l8:latest
     container_name: 'makeline-service'
@@ -67,20 +44,17 @@ services:
       timeout: 10s
       retries: 5
     environment:
-      - ORDER_QUEUE_URI=amqp://rabbitmq:5672
-      - ORDER_QUEUE_USERNAME=username
-      - ORDER_QUEUE_PASSWORD=password
-      - ORDER_QUEUE_NAME=orders
+      - SERVICE_BUS_CONNECTION_STRING=Endpoint=sb://your-servicebus.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=yourkey
+      - SERVICE_BUS_QUEUE_NAME=orders
       - ORDER_DB_URI=mongodb://mongodb:27017
       - ORDER_DB_NAME=orderdb
       - ORDER_DB_COLLECTION_NAME=orders
     networks:
       - backend_services
     depends_on:
-      rabbitmq:
-        condition: service_healthy
       mongodb:
         condition: service_healthy
+
   product-service:
     image: ramymohamed/product-service-l8:latest
     container_name: 'product-service'
@@ -94,6 +68,7 @@ services:
       retries: 5
     networks:
       - backend_services
+
   virtual-customer:
     image: ramymohamed/virtual-customer-l8:latest
     container_name: 'virtual-customer'
@@ -106,6 +81,7 @@ services:
     depends_on:
       order-service:
         condition: service_healthy
+
   # ai-service:
   #   build: ../ai-service
   #   container_name: 'ai-service'
@@ -119,12 +95,13 @@ services:
   #     retries: 5
   #   environment:
   #     - USE_AZURE_OPENAI=True # set to False if you are not using Azure OpenAI
-  #     - AZURE_OPENAI_DEPLOYMENT_NAME= # required if using Azure OpenAI
-  #     - AZURE_OPENAI_ENDPOINT= # required if using Azure OpenAI
-  #     - OPENAI_API_KEY= # always required
-  #     - OPENAI_ORG_ID= # required if using OpenAI
+  #     - AZURE_OPENAI_DEPLOYMENT_NAME=
+  #     - AZURE_OPENAI_ENDPOINT=
+  #     - OPENAI_API_KEY=
+  #     - OPENAI_ORG_ID=
   #   networks:
   #     - backend_services
+
 networks:
   backend_services:
     driver: bridge
