--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,8 @@ services:
       retries: 5
     networks:
       - backend_services
-
   order-service:
-    image: ramymohamed/order-service-l8:latest
+    image: dejmartins/order-service:latest
     container_name: 'order-service'
     restart: always
     ports:
@@ -26,14 +25,21 @@ services:
       timeout: 10s
       retries: 5
     environment:
-      - SERVICE_BUS_CONNECTION_STRING=Endpoint=sb://your-servicebus.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=yourkey
-      - SERVICE_BUS_QUEUE_NAME=orders
-      - SERVICE_BUS_RECONNECT_LIMIT=3
+      - ORDER_QUEUE_URI=${ORDER_QUEUE_URI}
+      - ORDER_QUEUE_HOSTNAME=${ORDER_QUEUE_HOSTNAME}
+      - ORDER_QUEUE_USERNAME=${ORDER_QUEUE_USERNAME}
+      - ORDER_QUEUE_PASSWORD=${ORDER_QUEUE_PASSWORD}
+      - ORDER_QUEUE_NAME=${ORDER_QUEUE_NAME}
+      - USE_WORKLOAD_IDENTITY_AUTH=${USE_WORKLOAD_IDENTITY_AUTH}
+      - ORDER_DB_URI=${ORDER_DB_URI}
+      - ORDER_DB_NAME=${ORDER_DB_NAME}
+      - ORDER_DB_COLLECTION_NAME=${ORDER_DB_COLLECTION_NAME}
+      - ORDER_QUEUE_PORT=${ORDER_QUEUE_PORT}
+      - ORDER_QUEUE_TRANSPORT=${ORDER_QUEUE_TRANSPORT}
     networks:
       - backend_services
-
   makeline-service:
-    image: ramymohamed/makeline-service-l8:latest
+    image: dejmartins/makeline-service:latest
     container_name: 'makeline-service'
     restart: always
     ports:
@@ -44,19 +50,24 @@ services:
       timeout: 10s
       retries: 5
     environment:
-      - SERVICE_BUS_CONNECTION_STRING=Endpoint=sb://your-servicebus.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=yourkey
-      - SERVICE_BUS_QUEUE_NAME=orders
-      - ORDER_DB_URI=mongodb://mongodb:27017
-      - ORDER_DB_NAME=orderdb
-      - ORDER_DB_COLLECTION_NAME=orders
+      - ORDER_QUEUE_URI=${ORDER_QUEUE_URI}
+      - ORDER_QUEUE_HOSTNAME=${ORDER_QUEUE_HOSTNAME}
+      - ORDER_QUEUE_USERNAME=${ORDER_QUEUE_USERNAME}
+      - ORDER_QUEUE_PASSWORD=${ORDER_QUEUE_PASSWORD}
+      - ORDER_QUEUE_NAME=${ORDER_QUEUE_NAME}
+      - USE_WORKLOAD_IDENTITY_AUTH=${USE_WORKLOAD_IDENTITY_AUTH}
+      - ORDER_DB_URI=${ORDER_DB_URI}
+      - ORDER_DB_NAME=${ORDER_DB_NAME}
+      - ORDER_DB_COLLECTION_NAME=${ORDER_DB_COLLECTION_NAME}
+      - ORDER_QUEUE_PORT=${ORDER_QUEUE_PORT}
+      - ORDER_QUEUE_TRANSPORT=${ORDER_QUEUE_TRANSPORT}
     networks:
       - backend_services
     depends_on:
       mongodb:
         condition: service_healthy
-
   product-service:
-    image: ramymohamed/product-service-l8:latest
+    image: dejmartins/product-service:latest
     container_name: 'product-service'
     restart: always
     ports:
@@ -68,20 +79,18 @@ services:
       retries: 5
     networks:
       - backend_services
-
-  virtual-customer:
-    image: ramymohamed/virtual-customer-l8:latest
-    container_name: 'virtual-customer'
-    restart: always
-    environment:
-      - ORDER_SERVICE_URL=http://order-service:3000/
-      - ORDERS_PER_HOUR=3600
-    networks:
-      - backend_services
-    depends_on:
-      order-service:
-        condition: service_healthy
-
+  # virtual-customer:
+  #   image: ramymohamed/virtual-customer-l8:latest
+  #   container_name: 'virtual-customer'
+  #   restart: always
+  #   environment:
+  #     - ORDER_SERVICE_URL=http://order-service:3000/
+  #     - ORDERS_PER_HOUR=3600
+  #   networks:
+  #     - backend_services
+  #   depends_on:
+  #     order-service:
+  #       condition: service_healthy
   # ai-service:
   #   build: ../ai-service
   #   container_name: 'ai-service'
@@ -95,13 +104,14 @@ services:
   #     retries: 5
   #   environment:
   #     - USE_AZURE_OPENAI=True # set to False if you are not using Azure OpenAI
-  #     - AZURE_OPENAI_DEPLOYMENT_NAME=
-  #     - AZURE_OPENAI_ENDPOINT=
-  #     - OPENAI_API_KEY=
-  #     - OPENAI_ORG_ID=
+  #     - AZURE_OPENAI_DEPLOYMENT_NAME= # required if using Azure OpenAI
+  #     - AZURE_OPENAI_ENDPOINT= # required if using Azure OpenAI
+  #     - AZURE_OPENAI_DALLE_ENDPOINT= # required if using Azure OpenAI's DALL-E model
+  #     - AZURE_OPENAI_DALLE_DEPLOYMENT_NAME= # required if using Azure OpenAI's DALL-E model
+  #     - OPENAI_API_KEY= # always required if using OpenAI if using Azure OpenAI, consider use Workload Identity https://learn.microsoft.com/azure/aks/open-ai-secure-access-quickstart
+  #     - OPENAI_ORG_ID= # required if using OpenAI
   #   networks:
   #     - backend_services
-
 networks:
   backend_services:
     driver: bridge
