--- a/.env
+++ b/.env
@@ -1,11 +1,16 @@
-ORDER_QUEUE_URI=amqps://pet-store.servicebus.windows.net
-ORDER_QUEUE_HOSTNAME=pet-store.servicebus.windows.net
-ORDER_QUEUE_USERNAME=RootManageSharedAccessKey
-ORDER_QUEUE_PASSWORD=W0+3Slh1ZriCyWbUjt8vmp75arT1BK8Pk+ASbCmW2dk=
+# ORDER_QUEUE_URI=amqps://pet-store.servicebus.windows.net
+# ORDER_QUEUE_HOSTNAME=pet-store.servicebus.windows.net
+# ORDER_QUEUE_USERNAME=RootManageSharedAccessKey
+# ORDER_QUEUE_PASSWORD=W0+3Slh1ZriCyWbUjt8vmp75arT1BK8Pk+ASbCmW2dk=
+ORDER_QUEUE_URI=amqp://username:password@localhost:5672/
+ORDER_QUEUE_HOSTNAME=localhost
+ORDER_QUEUE_USERNAME=username
+ORDER_QUEUE_PASSWORD=password
 ORDER_QUEUE_NAME=orders
 USE_WORKLOAD_IDENTITY_AUTH=false
-ORDER_DB_URI=mongodb://mongodb:27017
+ORDER_DB_URI=mongodb+srv://username:E805tKmaZYEo0XZe@cluster0.aeu72cc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 ORDER_DB_NAME=orderdb
 ORDER_DB_COLLECTION_NAME=orders
-ORDER_QUEUE_PORT=5671
+ORDER_QUEUE_PORT=5672
 ORDER_QUEUE_TRANSPORT=tls
+DB_URI=mongodb+srv://username:E805tKmaZYEo0XZe@cluster0.aeu72cc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
