--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: "3.7"
+
 services:
   mongodb:
     image: mongo:6.0.6
+    platform: linux/amd64
     container_name: 'mongo'
     restart: always
     ports:
@@ -13,8 +15,33 @@ services:
       retries: 5
     networks:
       - backend_services
+
+  rabbitmq:
+    image: rabbitmq:3.11.17-management-alpine
+    container_name: 'rabbitmq'
+    restart: always
+    environment:
+      - RABBITMQ_DEFAULT_USER=username
+      - RABBITMQ_DEFAULT_PASS=password
+    command: >
+      bash -c "
+        rabbitmq-plugins enable --offline rabbitmq_amqp1_0 &&
+        rabbitmq-server
+      "
+    ports:
+      - 15672:15672
+      - 5672:5672
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    networks:
+      - backend_services
+
   order-service:
     image: dejmartins/order-service:latest
+    platform: linux/amd64
     container_name: 'order-service'
     restart: always
     ports:
@@ -25,19 +52,19 @@ services:
       timeout: 10s
       retries: 5
     environment:
-      - ORDER_QUEUE_URI=${ORDER_QUEUE_URI}
-      - ORDER_QUEUE_HOSTNAME=${ORDER_QUEUE_HOSTNAME}
-      - ORDER_QUEUE_USERNAME=${ORDER_QUEUE_USERNAME}
-      - ORDER_QUEUE_PASSWORD=${ORDER_QUEUE_PASSWORD}
-      - ORDER_QUEUE_NAME=${ORDER_QUEUE_NAME}
-      - USE_WORKLOAD_IDENTITY_AUTH=${USE_WORKLOAD_IDENTITY_AUTH}
-      - ORDER_DB_URI=${ORDER_DB_URI}
-      - ORDER_DB_NAME=${ORDER_DB_NAME}
-      - ORDER_DB_COLLECTION_NAME=${ORDER_DB_COLLECTION_NAME}
-      - ORDER_QUEUE_PORT=${ORDER_QUEUE_PORT}
-      - ORDER_QUEUE_TRANSPORT=${ORDER_QUEUE_TRANSPORT}
+      - ORDER_QUEUE_URI=amqp://username:password@rabbitmq:5672
+      - ORDER_QUEUE_HOSTNAME=rabbitmq
+      - ORDER_QUEUE_USERNAME=username
+      - ORDER_QUEUE_PASSWORD=password
+      - ORDER_QUEUE_NAME=orders
+      - ORDER_DB_URI=mongodb+srv://username:E805tKmaZYEo0XZe@cluster0.aeu72cc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+      - ORDER_DB_NAME=orderdb
+      - ORDER_DB_COLLECTION_NAME=orders
+      - ORDER_QUEUE_PORT=5672
+      - ORDER_QUEUE_TRANSPORT=tcp
     networks:
       - backend_services
+
   makeline-service:
     image: dejmartins/makeline-service:latest
     container_name: 'makeline-service'
@@ -50,22 +77,22 @@ services:
       timeout: 10s
       retries: 5
     environment:
-      - ORDER_QUEUE_URI=${ORDER_QUEUE_URI}
-      - ORDER_QUEUE_HOSTNAME=${ORDER_QUEUE_HOSTNAME}
-      - ORDER_QUEUE_USERNAME=${ORDER_QUEUE_USERNAME}
-      - ORDER_QUEUE_PASSWORD=${ORDER_QUEUE_PASSWORD}
-      - ORDER_QUEUE_NAME=${ORDER_QUEUE_NAME}
-      - USE_WORKLOAD_IDENTITY_AUTH=${USE_WORKLOAD_IDENTITY_AUTH}
-      - ORDER_DB_URI=${ORDER_DB_URI}
-      - ORDER_DB_NAME=${ORDER_DB_NAME}
-      - ORDER_DB_COLLECTION_NAME=${ORDER_DB_COLLECTION_NAME}
-      - ORDER_QUEUE_PORT=${ORDER_QUEUE_PORT}
-      - ORDER_QUEUE_TRANSPORT=${ORDER_QUEUE_TRANSPORT}
+      - ORDER_QUEUE_URI=amqp://username:password@rabbitmq:5672
+      - ORDER_QUEUE_HOSTNAME=rabbitmq
+      - ORDER_QUEUE_USERNAME=username
+      - ORDER_QUEUE_PASSWORD=password
+      - ORDER_QUEUE_NAME=orders
+      - ORDER_DB_URI=mongodb+srv://username:E805tKmaZYEo0XZe@cluster0.aeu72cc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+      - ORDER_DB_NAME=orderdb
+      - ORDER_DB_COLLECTION_NAME=orders
+      - ORDER_QUEUE_PORT=5672
+      - ORDER_QUEUE_TRANSPORT=tcp
     networks:
       - backend_services
     depends_on:
       mongodb:
         condition: service_healthy
+
   product-service:
     image: dejmartins/product-service:latest
     container_name: 'product-service'
@@ -77,41 +104,11 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+    environment:
+      - DB_URI=mongodb+srv://username:E805tKmaZYEo0XZe@cluster0.aeu72cc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
     networks:
       - backend_services
-  # virtual-customer:
-  #   image: ramymohamed/virtual-customer-l8:latest
-  #   container_name: 'virtual-customer'
-  #   restart: always
-  #   environment:
-  #     - ORDER_SERVICE_URL=http://order-service:3000/
-  #     - ORDERS_PER_HOUR=3600
-  #   networks:
-  #     - backend_services
-  #   depends_on:
-  #     order-service:
-  #       condition: service_healthy
-  # ai-service:
-  #   build: ../ai-service
-  #   container_name: 'ai-service'
-  #   restart: always
-  #   ports:
-  #     - 5001:5001
-  #   healthcheck:
-  #     test: ["CMD", "wget", "-O", "/dev/null", "-q", "http://ai-service:5001/health"]
-  #     interval: 30s
-  #     timeout: 10s
-  #     retries: 5
-  #   environment:
-  #     - USE_AZURE_OPENAI=True # set to False if you are not using Azure OpenAI
-  #     - AZURE_OPENAI_DEPLOYMENT_NAME= # required if using Azure OpenAI
-  #     - AZURE_OPENAI_ENDPOINT= # required if using Azure OpenAI
-  #     - AZURE_OPENAI_DALLE_ENDPOINT= # required if using Azure OpenAI's DALL-E model
-  #     - AZURE_OPENAI_DALLE_DEPLOYMENT_NAME= # required if using Azure OpenAI's DALL-E model
-  #     - OPENAI_API_KEY= # always required if using OpenAI if using Azure OpenAI, consider use Workload Identity https://learn.microsoft.com/azure/aks/open-ai-secure-access-quickstart
-  #     - OPENAI_ORG_ID= # required if using OpenAI
-  #   networks:
-  #     - backend_services
+
 networks:
   backend_services:
     driver: bridge
