--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,8 @@ services:
       - ORDER_QUEUE_USERNAME=username
       - ORDER_QUEUE_PASSWORD=password
       - ORDER_QUEUE_NAME=orders
-      - ORDER_DB_URI=mongodb+srv://username:E805tKmaZYEo0XZe@cluster0.aeu72cc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+      - ORDER_DB_URI=mongodb+srv://username:E805tKmaZYEo0XZe@mongo-vcore-cluster.global.mongocluster.cosmos.azure.com/?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000
+      # - ORDER_DB_URI=mongodb+srv://username:E805tKmaZYEo0XZe@cluster0.aeu72cc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
       - ORDER_DB_NAME=orderdb
       - ORDER_DB_COLLECTION_NAME=orders
       - ORDER_QUEUE_PORT=5672
@@ -82,7 +83,8 @@ services:
       - ORDER_QUEUE_USERNAME=username
       - ORDER_QUEUE_PASSWORD=password
       - ORDER_QUEUE_NAME=orders
-      - ORDER_DB_URI=mongodb+srv://username:E805tKmaZYEo0XZe@cluster0.aeu72cc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+      - ORDER_DB_URI=mongodb+srv://username:E805tKmaZYEo0XZe@mongo-vcore-cluster.global.mongocluster.cosmos.azure.com/?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000
+      # - ORDER_DB_URI=mongodb+srv://username:E805tKmaZYEo0XZe@cluster0.aeu72cc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
       - ORDER_DB_NAME=orderdb
       - ORDER_DB_COLLECTION_NAME=orders
       - ORDER_QUEUE_PORT=5672
@@ -105,7 +107,8 @@ services:
       timeout: 10s
       retries: 5
     environment:
-      - DB_URI=mongodb+srv://username:E805tKmaZYEo0XZe@cluster0.aeu72cc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+      # - DB_URI=mongodb+srv://username:E805tKmaZYEo0XZe@cluster0.aeu72cc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+      - PRODUCT_DB_URI=mongodb+srv://username:E805tKmaZYEo0XZe@mongo-vcore-cluster.global.mongocluster.cosmos.azure.com/?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000
     networks:
       - backend_services
 
